[gd_scene load_steps=2 format=3 uid="uid://byt7uglr3vwas"]

[ext_resource type="Script" path="res://scripts/start_screen.gd" id="1_31xuk"]

[node name="start_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_31xuk")

[node name="game_title" type="Label" parent="."]
layout_mode = 0
offset_left = 363.0
offset_top = 105.0
offset_right = 830.0
offset_bottom = 226.0
theme_override_font_sizes/font_size = 52
text = "Tower Defence"
vertical_alignment = 1

[node name="title_button" type="Button" parent="game_title"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.5
offset_top = -60.5
offset_right = 187.5
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 437.0
offset_top = 289.0
offset_right = 698.0
offset_bottom = 559.0

[node name="start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Play"

[node name="options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit
"

[connection signal="pressed" from="game_title/title_button" to="." method="_on_title_button_pressed"]
[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
